# wingz

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
api/: config.py  permissions.py  settings.py  urls.py
api/tests/: base.py
rides/: admin.py  models.py  pagination.py  queryset.py  serializers.py  tests.py  views.py
rides/management/commands/: seed.py
rides/migrations/: 0001_initial.py  0002_alter_rideevent_description.py  0003_alter_ride_dropoff_latitude_and_more.py  0004_alter_ride_options.py
users/: admin.py  models.py  serializers.py  tests.py
users/migrations/: 0001_initial.py
