[project]
name = "wingz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "django-stubs>=5.2.8",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.0.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
]

[tool.basedpyright]
typeCheckingMode = "standard"
reportAttributeAccessIssue = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false
